--- a/style/style.css
+++ b/style/style.css
@@ -4,15 +4,19 @@ table{
 	table-layout: fixed;
 }
 
-.out td{
-	border: solid 1px;
-	width: 180px;
-	height: 180px;
-}
-
-.in td{
+td{
 	border: solid 1px;
 	width: 60px;
 	height: 60px;
 	text-align: center;
+}
+
+div{
+	width: 600px;
+	margin: auto;
+}
+
+body{
+	text-align:center;
+	width: 100%;
 }
